--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 			<a href="/toxcore">libtoxcore valadoc</a>
+			<a href="/toxencryptsave">libtoxcore valadoc</a>
 	</body>
 </html>
