fix(typo): typo fix in toxencryptsave

--- a/toxencryptsave/toxencryptsave/ToxEncrypt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.html
@@ -74,7 +74,7 @@
         <ul class="navi_inline">
           <li class="method"><span class="leaf_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><a href="ToxEncrypt.pass_encrypt.html" class="method">pass_encrypt</a></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data, <span class="main_basic_type"><span class="struct">uint8</span></span>[] passphrase, <span class="main_keyword">out</span> <span class="main_basic_type"><span class="struct">uint8</span></span>[] @out, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.ERR_ENCRYPTION.html" class="enum">ERR_ENCRYPTION</a></span> error)
             </span>
-            <div class="leaf_brief_description"><span class="brief_description">TODO: Make a proper doc for these functions.</span>
+            <div class="leaf_brief_description">
             </div></li>
           <li class="method"><span class="leaf_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><a href="ToxEncrypt.pass_decrypt.html" class="method">pass_decrypt</a></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data, <span class="main_basic_type"><span class="struct">uint8</span></span>[] passphrase, <span class="main_keyword">out</span> <span class="main_basic_type"><span class="struct">uint8</span></span>[] @out, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.ERR_DECRYPTION.html" class="enum">ERR_DECRYPTION</a></span> error)
             </span>
