--- a/toxencryptsave/toxencryptsave/ToxEncrypt.derive_key_with_salt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.derive_key_with_salt.html
@@ -45,6 +45,10 @@
         <hr class="main_hr"/>
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><span class="method">derive_key_with_salt</span></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] passphrase, <span class="main_basic_type"><span class="struct">uint8</span></span> salt, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.PassKey.html" class="class">PassKey</a></span> out_key, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.ERR_KEY_DERIVATION.html" class="enum">ERR_KEY_DERIVATION</a></span> error)
+        </div>
+        <div class="description">
+          <p>Same as derive_key_from_pass, except use the given salt for deterministic key derivation. The salt must be TOX_PASS_SALT_LENGTH bytes in 
+            length.</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
