--- a/toxencryptsave/toxencryptsave/ToxEncrypt.get_salt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.get_salt.html
@@ -45,6 +45,12 @@
         <hr class="main_hr"/>
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><span class="method">get_salt</span></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data, <span class="main_keyword">out</span> <span class="main_basic_type"><span class="struct">uint8</span></span> salt)
+        </div>
+        <div class="description">
+          <p>This retrieves the salt used to encrypt the given data, which can then be passed to derive_key_with_salt to produce the same key as was 
+            previously used. Any encrpyted data with this module can be used as input.</p>
+          <p>returns true if magic number matches success does not say anything about the validity of the data, only that data of the appropriate size
+            was copied</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
