--- a/toxencryptsave/toxencryptsave/ToxEncrypt.is_data_encrypted.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.is_data_encrypted.html
@@ -45,6 +45,9 @@
         <hr class="main_hr"/>
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><span class="method">is_data_encrypted</span></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data)
+        </div>
+        <div class="description">
+          <p>Determines whether or not the given data is encrypted (by checking the magic number)</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
