--- a/toxencryptsave/toxencryptsave/ToxEncrypt.pass_encrypt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.pass_encrypt.html
@@ -45,6 +45,11 @@
         <hr class="main_hr"/>
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><span class="method">pass_encrypt</span></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data, <span class="main_basic_type"><span class="struct">uint8</span></span>[] passphrase, <span class="main_keyword">out</span> <span class="main_basic_type"><span class="struct">uint8</span></span>[] @out, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.ERR_ENCRYPTION.html" class="enum">ERR_ENCRYPTION</a></span> error)
+        </div>
+        <div class="description">
+          <p>Encrypts the given data with the given passphrase. The output array must be at least data_len + TOX_PASS_ENCRYPTION_EXTRA_LENGTH bytes 
+            long. This delegates to tox_derive_key_from_pass and tox_pass_key_encrypt.</p>
+          <p>returns true on success</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
