--- a/toxencryptsave/toxencryptsave/ToxEncrypt.pass_key_decrypt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.pass_key_decrypt.html
@@ -45,6 +45,11 @@
         <hr class="main_hr"/>
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition"><span class="main_keyword">public</span> <span class="main_basic_type"><span class="struct">bool</span></span> <b><span class="method">pass_key_decrypt</span></b> (<span class="main_basic_type"><span class="struct">uint8</span></span>[] data, <span class="main_type"><a href="ToxEncrypt.PassKey.html" class="class">PassKey</a></span> key, <span class="main_basic_type"><span class="struct">uint8</span></span> @out, <span class="main_keyword">out</span> <span class="main_type"><a href="ToxEncrypt.ERR_DECRYPTION.html" class="enum">ERR_DECRYPTION</a></span> error)
+        </div>
+        <div class="description">
+          <p>This is the inverse of tox_pass_key_encrypt, also using only keys produced by tox_derive_key_from_pass.</p>
+          <p>the output data has size data_length - TOX_PASS_ENCRYPTION_EXTRA_LENGTH</p>
+          <p>returns true on success</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
