docs(PassKey): fix comments

--- a/toxencryptsave/toxencryptsave/index.htm
+++ b/toxencryptsave/toxencryptsave/index.htm
@@ -32,7 +32,8 @@
           <li class="namespace"><a href="ToxEncrypt.html">ToxEncrypt</a></li>
           <h3 class="main_title">Classes:</h3>
           <ul class="navi_inline">
-            <li class="class"><a href="ToxEncrypt.PassKey.html">PassKey</a></li>
+            <li class="class"><a href="ToxEncrypt.PassKey.html">PassKey</a> - <span class="brief_description">This key structure's internals should 
+                not be used by any client program, even if they are straightforward here.</span></li>
           </ul>
           <h3 class="main_title">Enums:</h3>
           <ul class="navi_inline">
