--- a/toxencryptsave/toxencryptsave/ToxEncrypt.PassKey.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.PassKey.html
@@ -41,6 +41,9 @@
 
         <h2 class="main_title">Description:</h2>
         <div class="main_code_definition">[ <span class="main_type">Compact</span> ]<br/><span class="main_keyword">public</span> <span class="main_keyword">class</span> <b><span class="class">PassKey</span></b>
+        </div>
+        <div class="description">
+          <p>This key structure's internals should not be used by any client program, even if they are straightforward here.</p>
         </div><br/>
         <div class="namespace_note"><b>Namespace:</b> <a href="ToxEncrypt.html">ToxEncrypt</a>
         </div>
