--- a/toxencryptsave/toxencryptsave/ToxEncrypt.html
+++ b/toxencryptsave/toxencryptsave/ToxEncrypt.html
@@ -47,7 +47,8 @@
         <h2 class="main_title">Content:</h2>
         <h3 class="main_title">Classes:</h3>
         <ul class="navi_inline">
-          <li class="class"><a href="ToxEncrypt.PassKey.html">PassKey</a></li>
+          <li class="class"><a href="ToxEncrypt.PassKey.html">PassKey</a> - <span class="brief_description">This key structure's internals should not 
+              be used by any client program, even if they are straightforward here.</span></li>
         </ul>
         <h3 class="main_title">Enums:</h3>
         <ul class="navi_inline">
